fix nav center alignment

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -182,3 +182,7 @@ nav.navbar {
 .col-xs-6 {
     padding: 0;
 }
+
+.navbar-collapse.collapse.ib {
+    display: inline-block !important;
+}
